# genai-calling

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE_DESIGN.md  CONFIGURATION.md
examples/: demo.py  mcp.py
gravtice/: __init__.py  __main__.py
gravtice/genai/: __init__.py  cli.py  client.py  mcp_cli.py  mcp_server.py
gravtice/genai/_internal/: config.py  http.py
gravtice/genai/providers/: openai.py  tuzi.py
nous/genai/: mcp_server.py
nous/genai/_internal/: config.py
scripts/: modes_probe.py  tuzi_openai_chat_smoke_cli.py  tuzi_openai_video_smoke_cli.py  tuzi_web_smoke.py
tests/: test_capability_flags.py  test_capability_rules.py  test_cli_google_download_auth.py  test_cli_probe_parsing.py  test_cli_prompt_path.py  test_cli_subcommands.py  test_cli_timeout_hint.py  test_cli_video_wait_default.py  test_client_protected_url_artifacts.py  test_client_timeout.py  test_config_env_loading.py  test_http_error_mapping.py  test_http_security.py  test_mcp_artifact_limits.py  test_mcp_cli_url_resolution.py  test_mcp_input_policy.py  test_mcp_model_keyword_filter.py  test_mcp_server_transports.py  test_mcp_token_rules.py  test_model_catalog_validation.py  test_model_discovery.py  test_modes_inference.py  test_openai_responses_streaming.py  test_output_json_schema.py  test_output_parser_tool.py  test_public_imports.py  test_reasoning_mapping.py  test_review_report_fixes.py  test_sse_parser.py  test_tool_calling.py  test_tuzi_gemini_markdown_image.py  test_tuzi_models.py
(+2 files in other folders)
