[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-calling"
version = "0.1.6"
description = "Single-endpoint GenAI SDK (multi-provider, multimodal)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["mcp>=1.25.0", "typing-extensions>=4.9.0", "uvicorn>=0.30.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gravtice/genai-calling"
Issues = "https://github.com/gravtice/genai-calling/issues"

[dependency-groups]
dev = ["mypy>=1.10.0", "pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
genai = "gravtice.genai.cli:main"
genai-mcp-server = "gravtice.genai.mcp_server:main"
genai-mcp-cli = "gravtice.genai.mcp_cli:main"

[tool.setuptools.packages.find]
include = ["gravtice*"]

[tool.setuptools.package-data]
gravtice = ["py.typed"]
